--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,12 +4,14 @@
   "description": "This is the backend of realtime whiteboard sharing web application",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "Chandanpreet Kaur",
   "license": "MIT",
   "dependencies": {
     "express": "^4.19.2",
+    "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
   }
 }
